Updated pom to run mvn test.