@@ -37,6 +37,11 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
         		<artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>
+                        --add-opens beastBook.core/core=ALL-UNNAMED
+                    </argLine>
+                </configuration>
 	        </plugin>
         </plugins>
     </build>
